Use if_ioctl() for changing MTU, not ether_ioctl to prevent panic

Fix PR kern/56292